# streamlit-demo

./: .gitignore  pyproject.toml
streamlit_demo/: app.py  utils.py
streamlit_demo/auth/: auth.py
streamlit_demo/database/: investment_trust.py
streamlit_demo/domain/: investment_trust.py
streamlit_demo/pages/: login.py
