[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["44taka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
st-supabase-connection = "^1.2.2"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
